--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>AWAX</title>
+        <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +18,7 @@
                 </div>
             </div>
             <div class="menu">
+                <img class="menu-openner" src="assets/images/menu.png"/>
                 <nav>
                     <ul>
                         <li class="active"><a href>Home</a></li>
